# jpx_kaiji_downloader

./: .gitignore  CLAUDE.md  attachments_output.py  attachments_output_README.md  attachments_output_使用手順書.md  batch_download_report_check.py  batch_download_report_check_README.md  batch_download_report_check_使用手順書.md  codelist.csv  codelist_standard_and_growth.csv  html_summary_join.py  html_summary_join_README.md  html_summary_join_使用手順書.md  html_summary_output.py  html_summary_output_README.md  html_summary_output_使用手順書.md  html_summary_xbrl_list_create.py  html_summary_xbrl_list_create_README.md  html_summary_xbrl_list_create_使用手順書.md  kaiji_downloader.py  kaiji_downloader_README.md  kaiji_downloader_使用手順書.md  pyproject.toml  successful_stocks.csv  xbrl_financial_indicators.csv  xbrl_financial_indicators_JPEN_list.csv  テーブル構造.md  データ分析ワークフロー_README.md  参考ブログ.md
output/: clear_html_summary_data.py  export_html_summary_query.py  export_html_summary_query_使用手順書.md  html_summary.sqbpro  import_html_summary.py  import_html_summary_使用手順書.md  実行ファイル用途一覧_output.md  銘柄抽出マクロ.vba
src/: scraper.py
